# GermanFirmenAbcPars

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  req_script.py  requirements.txt  result.json  script.py
static/: data.json  style.css
templates/: empty.html  index.html  result.html
